--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,113 @@
-header {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: yellowgreen;
-    background: purple;
-    height: 60px;
-    font-size: 30pt;
+body {
+    background-image: url("../images/background.jpg");
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: white;
+  }
+  .main {
+    max-width: 960px;
+    margin: 0 auto;
+    margin-top: 50px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: white;
+    font-size: 30px;
+  }
+  
+  .hidden {
+    visibility: hidden;
+  }
+  
+  .img-initial {
+    background-size: 70%;
+    height: 520px;
+  }
+  
+  .start-btn {
+    width: 200px;
+    color: yellow;
+    font-size: 36px;
+    border-radius: 50px;
+    background: orangered;
+    padding: 10px;
     text-align: center;
-    padding-top:20px;
-}
-.section {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background:hotpink;
-    color: black;
-    padding-top: 2pc;
-    padding-bottom: 1pc;
-    margin-left: 200px;
-    width: 900px;
-    height: 450px;
-    font-size: 14pt;
+    margin: 0 auto;
+    cursor: pointer;
+  }
+  
+  .timer,
+  .score {
+    margin-bottom: 30px;
+    color: white;
+    font-size: 30px;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .score {
+    text-align: right;
+  }
+  
+  .time {
+    color: white;
+    font-size: 30px;
+  }
+  
+  .question {
+    font-size: 27px;
+    margin-bottom: 50px;
     text-align: center;
-    align-content:center;
-}
-#timer, #questionsArea, #form, #finalPage, h2{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: black;
-}
+  }
+  
+  .answer {
+    padding: 20px;
+    color: #631172;
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    background-color: white;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .gif {
+    width: 500px;
+    margin-top: 50px;
+  }
+  
+  .row {
+    margin: 0 auto;
+  }
+  
+  .right-answer {
+    background: green;
+    color: white;
+  }
+  
+  .wrong-answer {
+    background: #ff5270;
+    color: white;
+  }
+  
+  .times-up {
+    font-size: 36px;
+    color: #ff5270;
+    text-align: center;
+  }
+  
+  .final {
+    font-size: 30px;
+    text-align: center;
+    margin-top: 100px;
+  }
+  .reset-button {
+    background: #ff5270;
+    color: white;
+    border: none;
+    margin-top: 80px;
+    border-radius: 40px;
+    width: 300px;
+  }
+  
+  .reset-button:hover {
+    background: #fed501;
+    border: none;
+  }
